Ensured satisfactory colour contrast on all text.

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -2,6 +2,7 @@
 
 body {
     overflow-x: hidden;
+    color: $gray-600;
 }
 
 p,
